Actualizacion de la descripcion

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 			<p style="display: inline-block;width:400px;font-weight:200;">IT Analyst</p>
 		</header>
 		<div style="background-color:#df9de3;text-align:center;padding:10px;">
-			Over 5 Years of experience in IT, developing web apps and administrating databases.
+			Over 5 Years of experience in IT, web apps and database administration.
 		</div>
 		<section>
 			<div style="width:900px;margin-left:auto;margin-right:auto;">
